--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip3 install beautifulsoup4
-          /usr/share/locales/install-language-pack pl
+          sudo /usr/share/locales/install-language-pack pl
       - name: Run script
         run: python3 mdm.py
       - name: Commit
